--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hello
+<h2> About me </h2>
+
+My name is Paul Pritz and I am currently studiying towards a PhD in computer Science at Imperial College London.
