--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <h2> About me </h2>
 
-My name is Paul Pritz and I am currently studiying towards a PhD in computer Science at Imperial College London.
+<div class="intro">
+    <p>
+        My name is Paul Pritz and I am currently studiying towards a PhD in computer Science at Imperial College London.
+    </p>
+
+
+</div>
