--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ layout: default
 
 <div class="intro">
     <p>
-        My name is Paul Pritz and I am currently studiying towards a PhD in computer Science at Imperial College London.
+        My name is Paul Pritz and I am currently studying towards a PhD in computer Science at Imperial College London.
+        More content to come...
     </p>
 
 
