--- a/cv/index.html
+++ b/cv/index.html
@@ -7,4 +7,5 @@ title: CV
             <i class="fa fa-file-pdf-o"></i>
         Download PDF.</a>
     </a>
+    <iframe src="/cv.pdf" class="cv"></iframe>
 </div>
